<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
              android:background="@color/detail_background"
              android:orientation="vertical"
              android:layout_height="match_parent">

    <include layout="@layout/toolbar_main"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" android:id="@+id/toolbar_main"/>

    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent" tools:srcCompat="@drawable/placeholder_poster"
                android:id="@+id/backdrop_image_view" app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="centerCrop" android:contentDescription="@string/poster_desc"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_main"
        />

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/overlay"
                android:alpha="0.7" android:background="@android:color/background_dark"
                android:contentDescription="@string/overlay"/>

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent" tools:srcCompat="@drawable/placeholder_poster"
                android:id="@+id/poster_image_view" app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="fitCenter" android:contentDescription="@string/poster_desc"
                android:layout_margin="8dp"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_main"
        />

    </FrameLayout>

    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1">


        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ui.DetailActivity"
                android:padding="8dp"
                >

            <TextView
                    tools:text="Movie Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_movie_title" android:textSize="24sp"
                    android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/detail_text_color"
                    android:textStyle="bold"/>

            <TextView
                    android:text="@string/vote_count_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/vote_count_label"
                    android:textSize="16sp"
                    android:textColor="@color/detail_text_color"
                    android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/vote_average_label"/>
            <TextView
                    android:text="@string/vote_average_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/vote_average_label"
                    android:textSize="16sp"
                    android:textColor="@color/detail_text_color"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/vote_count_rating"
                    android:layout_marginTop="8dp"/>
            <TextView
                    android:text="@string/original_lang_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/original_lang_label"
                    android:textSize="16sp"
                    android:textColor="@color/detail_text_color"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/vote_count_label" android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    tools:text="105"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/vote_count_text"
                    android:textSize="16sp"
                    android:textColor="@color/detail_text_color"
                    app:layout_constraintStart_toEndOf="@+id/vote_count_label" android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.033"
                    app:layout_constraintTop_toTopOf="@+id/vote_count_label"
                    app:layout_constraintBottom_toBottomOf="@+id/vote_count_label"/>

            <TextView
                    tools:text="3.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/vote_average_text"
                    android:textSize="16sp"
                    android:textColor="@color/detail_text_color"
                    app:layout_constraintStart_toEndOf="@+id/vote_average_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toTopOf="@+id/vote_average_label"
                    app:layout_constraintBottom_toBottomOf="@+id/vote_average_label"/>

            <TextView
                    tools:text="EN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/original_lang_text"
                    android:textSize="16sp"
                    android:textColor="@color/detail_text_color"
                    app:layout_constraintStart_toEndOf="@+id/original_lang_label" android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintTop_toTopOf="@+id/original_lang_label"
                    app:layout_constraintBottom_toBottomOf="@+id/original_lang_label"/>

            <TextView
                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet interdum orci, at sagittis mauris. Donec a malesuada est, in viverra sem."
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/overview_text" android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/original_lang_label"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/detail_text_color"
                    android:gravity="center_vertical" app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>

            <android.support.v7.widget.AppCompatRatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/vote_count_rating"
                    android:numStars="5" android:rating="2" android:stepSize=".5"
                    android:theme="@style/VoteRatingBar" style="@style/Widget.AppCompat.RatingBar.Indicator"
                    android:scaleX="0.75"
                    android:scaleY="0.75"
                    android:translationX="-18dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_title" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintBottom_toTopOf="@+id/vote_average_label"
                    android:layout_marginBottom="8dp"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</LinearLayout>